Add Navbar, NAvIcon , basic background image , animation

--- a/src/index.html
+++ b/src/index.html
@@ -1,18 +1,80 @@
+
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Document</title>
-  <link href="../node_modules/bootstrap/dist/css/bootstrap.min.css" type="text/css" rel="stylesheet" />
-  <link href="css/index.css" type="text/css" rel="stylesheet" />
-</head>
-<body>
-  <h3>Hello World!</h3>
-</body>
 
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <title>Document</title>
+    <link href="../node_modules/bootstrap/dist/css/bootstrap.min.css" type="text/css" rel="stylesheet" />
+  <link href="css/index.css" type="text/css" rel="stylesheet" />
+<body>
+  <nav class="navbar navbar-expand-lg navbar-light" id="navbar">
+    <img src="img/1568063.svg"  width="30" height="30" class="d-inline-block align-top" alt=""/>
+    <a class="navbar-brand mr-5" id="nav-barber-button">&nbsp; Little Mary Beauty</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+      <div class="navbar-nav">
+        <a class="nav-item nav-link active" href="#" id="general-info-button">General Information</a>
+        <a class="nav-item nav-link active" href="#">About us</a>
+        <a class="nav-item nav-link active" href="#">Potfolio</a>
+      </div>
+    </div>
+  </nav>
+
+  <div class="text-center" id="main-background">
+    <div class="card-body text-center" id="main-text">
+      <h5 class="site-title">Little Mary beauty</h5>
+      <p class="card-text">Life is more beautiful when you meet the right hairdresser.</p>
+      <a href="#" class="btn btn-outline-danger" onclick="">More information</a>
+    </div>
+  </div>
+
+  <div class="text-center" >
+    <div class="card-body text-center" id="bg-text">
+      <h5 class="site-title">Little Mary beauty</h5>
+      <p class="card-text">Life is more beautiful when you meet the right hairdresser.</p>
+      <a href="#" class="btn btn-danger" onclick=""></a>
+    </div>
+  </div>
+
+  <div class="text-center" >
+    <div class="card-body text-center" id="bg-text">
+      <h5 class="site-title">Little Mary beauty</h5>
+      <p class="card-text">Life is more beautiful when you meet the right hairdresser.</p>
+      <a href="#" class="btn btn-danger" onclick=""></a>
+    </div>
+  </div>
+
+  <div class="text-center" >
+    <div class="card-body text-center" id="bg-text">
+      <h5 class="site-title">Little Mary beauty</h5>
+      <p class="card-text">Life is more beautiful when you meet the right hairdresser.</p>
+      <a href="#" class="btn btn-danger" onclick=""></a>
+    </div>
+  </div>
+
+  <div class="text-center" >
+    <div class="card-body text-center" id="bg-text">
+      <h5 class="site-title">Little Mary beauty</h5>
+      <p class="card-text">Life is more beautiful when you meet the right hairdresser.</p>
+      <a href="#" class="btn btn-danger" onclick=""></a>
+    </div>
+  </div>
+
+
+  <hr style="width:80%">
+
+ 
+
+  <hr style="width:80%">
+
+ 
 <script src="../node_modules/jquery/dist/jquery.min.js"></script>
 <script src="../node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
 <script src="index.js"></script>
+</body>
+
 </html>
