--- a/src/index.html
+++ b/src/index.html
@@ -1,18 +1,19 @@
-
 <!DOCTYPE html>
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>Document</title>
-    <link href="../node_modules/bootstrap/dist/css/bootstrap.min.css" type="text/css" rel="stylesheet" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <title>Document</title>
+  <link href="../node_modules/bootstrap/dist/css/bootstrap.min.css" type="text/css" rel="stylesheet" />
   <link href="css/index.css" type="text/css" rel="stylesheet" />
+
 <body>
   <nav class="navbar navbar-expand-lg navbar-light" id="navbar">
-    <img src="img/1568063.svg"  width="30" height="30" class="d-inline-block align-top" alt=""/>
+    <img src="img/1568063.svg" width="30" height="30" class="d-inline-block align-top" alt="" />
     <a class="navbar-brand mr-5" id="nav-barber-button">&nbsp; Little Mary Beauty</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
+      aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
@@ -31,50 +32,84 @@
       <a href="#" class="btn btn-outline-danger" onclick="">More information</a>
     </div>
   </div>
+ 
+  <div class="info">
+    <hr class="hr"> <p id="general-info">General Info </p> <hr class="hr"> 
+  </div>
+  <div id="about-us">
+    <div id="first-info">
+      <h4 class="title">About us</h4>
+      <p class="info-text">Little Mary beauty is a full service women’s hair salon located in Lviv.
 
-  <div class="text-center" >
-    <div class="card-body text-center" id="bg-text">
-      <h5 class="site-title">Little Mary beauty</h5>
-      <p class="card-text">Life is more beautiful when you meet the right hairdresser.</p>
-      <a href="#" class="btn btn-danger" onclick=""></a>
+Our professional team is current with all the latest styles and trends to provide you with your best look. We specialize in Deva cuts, single-process color, highlighting, and Pintura.
+
+We strive for the highest quality of service, while maintaining a fun, friendly, non-pretentious environment.</p>
     </div>
+    <div id="second-info">
+      <img src="img/facebook.svg" width="30" height="30" />
+      <img src="img/instagram.svg" width="30" height="30" />
+      <img src="img/pinterest.svg" width="30" height="30" />
+      <div id="work-time">
+        <h4 class="title">Salon hours:</h4>
+        <p class="info-text">Monday 12-8 | Tuesday 10-8 | Wednesday 10-8
+          Thursday 10-8 | Friday 12-8 | Saturday 9-6
+          Sunday 10-6</p>
+      </div>
+    </div>
+
+
+  </div>
+  <div class="info">
+    <hr class="hr"> <p id="general-info">Photoes</p> <hr class="hr">
   </div>
 
-  <div class="text-center" >
-    <div class="card-body text-center" id="bg-text">
-      <h5 class="site-title">Little Mary beauty</h5>
-      <p class="card-text">Life is more beautiful when you meet the right hairdresser.</p>
-      <a href="#" class="btn btn-danger" onclick=""></a>
+  <div class="bd-example">
+    <div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel">
+      <ol class="carousel-indicators">
+        <li data-target="#carouselExampleCaptions" data-slide-to="0" class="active"></li>
+        <li data-target="#carouselExampleCaptions" data-slide-to="1"></li>
+        <li data-target="#carouselExampleCaptions" data-slide-to="2"></li>
+      </ol>
+      <div class="carousel-inner">
+        <div class="carousel-item active" id="a">
+          <img height="500" src="./img/Inside San Francisco's Most Talked About Nail Salon _ Domino.jpg" class="d-block w-100" alt="...">
+          <div class="carousel-caption d-none d-md-block">
+            <h5>First slide label</h5>
+            <p>Nulla vitae elit libero, a pharetra augue mollis interdum.</p>
+          </div>
+        </div>
+        <div class="carousel-item" id="a">
+          <img  height="500" src="./img/Mayfair haunt Annabel’s swings open its maximalist doors.jpg" class="d-block w-100" alt="...">
+          <div class="carousel-caption d-none d-md-block">
+            <h5>Second slide label</h5>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+          </div>
+        </div>
+        <div class="carousel-item">
+          <img  height="500" src="./img/_Сute & Cava_ Coffe Bar and Beauty Saloon _ M Design.jpg" class="d-block w-100" alt="...">
+          <div class="carousel-caption d-none d-md-block">
+            <h5>Third slide label</h5>
+            <p>Praesent commodo cursus magna, vel scelerisque nisl consectetur.</p>
+          </div>
+        </div>
+      </div>
+      <a class="carousel-control-prev" href="#carouselExampleCaptions" role="button" data-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="sr-only">Previous</span>
+      </a>
+      <a class="carousel-control-next" href="#carouselExampleCaptions" role="button" data-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="sr-only">Next</span>
+      </a>
     </div>
   </div>
-
-  <div class="text-center" >
-    <div class="card-body text-center" id="bg-text">
-      <h5 class="site-title">Little Mary beauty</h5>
-      <p class="card-text">Life is more beautiful when you meet the right hairdresser.</p>
-      <a href="#" class="btn btn-danger" onclick=""></a>
-    </div>
-  </div>
-
-  <div class="text-center" >
-    <div class="card-body text-center" id="bg-text">
-      <h5 class="site-title">Little Mary beauty</h5>
-      <p class="card-text">Life is more beautiful when you meet the right hairdresser.</p>
-      <a href="#" class="btn btn-danger" onclick=""></a>
-    </div>
-  </div>
-
 
   <hr style="width:80%">
 
- 
 
-  <hr style="width:80%">
-
- 
-<script src="../node_modules/jquery/dist/jquery.min.js"></script>
-<script src="../node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
-<script src="index.js"></script>
+  <script src="../node_modules/jquery/dist/jquery.min.js"></script>
+  <script src="../node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
+  <script src="index.js"></script>
 </body>
 
 </html>
