--- a/index.html
+++ b/index.html
@@ -3,15 +3,16 @@
 
 <head>
   <meta charset="UTF-8">
+  <link rel="icon" href="./img/cosmetics.png" type="image" sizes="16x16" />
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <title>Document</title>
+  <title>LM Beauty</title>
   <link href="./node_modules/bootstrap/dist/css/bootstrap.min.css" type="text/css" rel="stylesheet" />
-  <link href="./src/css/index.css" type="text/css" rel="stylesheet" />
-  <img width="60" height="60" src="./src/img/top.svg" id="toTop"/>
+  <link href="./index.css" type="text/css" rel="stylesheet" />
+  <img width="60" height="60" src="./img/top.svg" id="toTop"/>
 
 <body>
   <nav class="navbar navbar-expand-lg navbar-light" id="navbar">
-    <img src="./src/img/1568063.svg" width="30" height="30" class="d-inline-block align-top" alt="" />
+    <img src="./img/1568063.svg" width="30" height="30" class="d-inline-block align-top" alt="" />
     <a class="navbar-brand mr-5" id="nav-barber-button">&nbsp; Little Mary Beauty</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
       aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
@@ -53,9 +54,9 @@
       </p>
     </div>
     <div id="second-info">
-      <img src="./src/img/facebook.svg" width="30" height="30" />
-      <img src="./src/img/instagram.svg" width="30" height="30" />
-      <img src="./src/img/pinterest.svg" width="30" height="30" />
+      <img src="./img/facebook.svg" width="30" height="30" />
+      <img src="./img/instagram.svg" width="30" height="30" />
+      <img src="./img/pinterest.svg" width="30" height="30" />
       <div id="work-time">
         <h4 class="title">Salon hours:</h4>
         <p class="info-text">Monday 12-8 | Tuesday 10-8 | Wednesday 10-8
@@ -81,7 +82,7 @@
       </ol>
       <div class="carousel-inner">
         <div class="carousel-item active" id="a">
-          <img height="500" src="./src/img/Inside San Francisco's Most Talked About Nail Salon _ Domino.jpg"
+          <img height="500" src="./img/Inside San Francisco's Most Talked About Nail Salon _ Domino.jpg"
             class="d-block w-100" alt="...">
           <div class="carousel-caption d-none d-md-block">
             <h5>First slide label</h5>
@@ -89,7 +90,7 @@
           </div>
         </div>
         <div class="carousel-item" id="a">
-          <img height="500" src="./src/img/Mayfair haunt Annabel’s swings open its maximalist doors.jpg"
+          <img height="500" src="./img/Mayfair haunt Annabel’s swings open its maximalist doors.jpg"
             class="d-block w-100" alt="...">
           <div class="carousel-caption d-none d-md-block">
             <h5>Second slide label</h5>
@@ -97,7 +98,7 @@
           </div>
         </div>
         <div class="carousel-item">
-          <img height="500" src="./src/img/_Сute & Cava_ Coffe Bar and Beauty Saloon _ M Design.jpg" class="d-block w-100"
+          <img height="500" src="./img/_Сute & Cava_ Coffe Bar and Beauty Saloon _ M Design.jpg" class="d-block w-100"
             alt="...">
           <div class="carousel-caption d-none d-md-block">
             <h5>Third slide label</h5>
@@ -151,9 +152,9 @@
     <div class="folow-us">
       <h4 class="h4">Folow us</h4>
       <div class="social">
-      <img src="./src/img/facebook.svg" width="30" height="30" />
-      <img src="./src/img/instagram.svg" width="30" height="30" />
-      <img src="./src/img/pinterest.svg" width="30" height="30" />
+      <img src="./img/facebook.svg" width="30" height="30" />
+      <img src="./img/instagram.svg" width="30" height="30" />
+      <img src="./img/pinterest.svg" width="30" height="30" />
     </div>
        Made with ❤️ by Mary Ursul
     </div>
@@ -164,7 +165,7 @@
 
   <script src="./node_modules/jquery/dist/jquery.min.js"></script>
   <script src="./node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
-  <script src="./src/index.js"></script>
+  <script src="./index.js"></script>
 </body>
 
 </html>
