--- a/index.html
+++ b/index.html
@@ -54,9 +54,15 @@
       </p>
     </div>
     <div id="second-info">
-      <img src="./img/facebook.svg" width="30" height="30" />
-      <img src="./img/instagram.svg" width="30" height="30" />
-      <img src="./img/pinterest.svg" width="30" height="30" />
+        <a href="https://www.facebook.com/profile.php?id=100009965893233">
+          <img src="./img/facebook.svg" width="30" height="30" />
+      </a>
+      <a href="https://www.instagram.com/maryursul/">
+          <img src="./img/instagram.svg" width="30" height="30" />
+      </a>
+      <a href="https://www.pinterest.co.uk/search/pins/?q=hair%20salons&rs=typed&term_meta[]=hair%7Ctyped&term_meta[]=salons%7Ctyped">
+        <img src="./img/pinterest.svg" width="30" height="30" />
+      </a>
       <div id="work-time">
         <h4 class="title">Salon hours:</h4>
         <p class="info-text">Monday 12-8 | Tuesday 10-8 | Wednesday 10-8
@@ -152,9 +158,15 @@
     <div class="folow-us">
       <h4 class="h4">Folow us</h4>
       <div class="social">
-      <img src="./img/facebook.svg" width="30" height="30" />
-      <img src="./img/instagram.svg" width="30" height="30" />
-      <img src="./img/pinterest.svg" width="30" height="30" />
+        <a href="https://www.facebook.com/profile.php?id=100009965893233">
+            <img src="./img/facebook.svg" width="30" height="30" />
+        </a>
+        <a href="https://www.instagram.com/maryursul/">
+            <img src="./img/instagram.svg" width="30" height="30" />
+        </a>
+        <a href="https://www.pinterest.co.uk/search/pins/?q=hair%20salons&rs=typed&term_meta[]=hair%7Ctyped&term_meta[]=salons%7Ctyped">
+          <img src="./img/pinterest.svg" width="30" height="30" />
+        </a>
     </div>
        Made with ❤️ by Mary Ursul
     </div>
