Fix minore bugs, refactore code, made some improvements

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <link href="./node_modules/bootstrap/dist/css/bootstrap.min.css" type="text/css" rel="stylesheet" />
   <link href="./index.css" type="text/css" rel="stylesheet" />
   <img width="60" height="60" src="./img/top.svg" id="toTop"/>
+  </head>
 
 <body>
   <nav class="navbar navbar-expand-lg navbar-light" id="navbar">
@@ -23,7 +24,7 @@
       <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
         <div class="navbar-nav">
           <a class="nav-item nav-link active" href="#" id="general-info">General Information</a>
-          <a class="nav-item nav-link active" href="#" id="photoes">Photoes</a>
+          <a class="nav-item nav-link active" href="#" id="photos">Photos</a>
           <a class="nav-item nav-link active" href="#" id="contact-info">Contact information</a>
         </div>
       </div>
@@ -45,7 +46,7 @@
   <div id="about-us">
     <div id="first-info">
       <h4 class="title">About us</h4>
-      <p class="info-text">Little Mary beauty is a full service women’s hair salon located in Lviv.
+      <p class="info-text">"Little Mary beauty"- is a full service women’s hair salon located in Lviv.
 
         Our professional team is current with all the latest styles and trends to provide you with your best look. We
         specialize in Deva cuts, single-process color, highlighting, and Pintura.
@@ -55,13 +56,13 @@
     </div>
     <div id="second-info">
         <a href="https://www.facebook.com/profile.php?id=100009965893233">
-          <img src="./img/facebook.svg" width="30" height="30" />
+          <img src="./img/facebook.svg" width="38.5" height="38.5" />
       </a>
       <a href="https://www.instagram.com/maryursul/">
-          <img src="./img/instagram.svg" width="30" height="30" />
+          <img src="./img/instagram.svg" width="38.5" height="38.5" />
       </a>
       <a href="https://www.pinterest.co.uk/search/pins/?q=hair%20salons&rs=typed&term_meta[]=hair%7Ctyped&term_meta[]=salons%7Ctyped">
-        <img src="./img/pinterest.svg" width="30" height="30" />
+        <img src="./img/pinterest.svg" width="38.5" height="38.5" />
       </a>
       <div id="work-time">
         <h4 class="title">Salon hours:</h4>
@@ -75,7 +76,7 @@
   </div>
   <div class="info" id="photoes-info">
     <hr class="hr">
-    <p id="general-info">Photoes</p>
+    <p id="general-info">Photos</p>
     <hr class="hr">
   </div>
 
@@ -88,27 +89,24 @@
       </ol>
       <div class="carousel-inner">
         <div class="carousel-item active" id="a">
-          <img height="500" src="./img/Inside San Francisco's Most Talked About Nail Salon _ Domino.jpg"
+          <img height="550" src="./img/Inside San Francisco's Most Talked About Nail Salon _ Domino.jpg"
             class="d-block w-100" alt="...">
           <div class="carousel-caption d-none d-md-block">
-            <h5>First slide label</h5>
-            <p>Nulla vitae elit libero, a pharetra augue mollis interdum.</p>
+            <p>Life is full of beauty. Notice it. Ashley Smith</p>
           </div>
         </div>
         <div class="carousel-item" id="a">
-          <img height="500" src="./img/Mayfair haunt Annabel’s swings open its maximalist doors.jpg"
+          <img height="550" src="./img/Mayfair haunt Annabel’s swings open its maximalist doors.jpg"
             class="d-block w-100" alt="...">
           <div class="carousel-caption d-none d-md-block">
-            <h5>Second slide label</h5>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+            <p>Beauty surrounds us. Rumi</p>
           </div>
         </div>
         <div class="carousel-item">
-          <img height="500" src="./img/_Сute & Cava_ Coffe Bar and Beauty Saloon _ M Design.jpg" class="d-block w-100"
+          <img height="550" src="./img/_Сute & Cava_ Coffe Bar and Beauty Saloon _ M Design.jpg" class="d-block w-100"
             alt="...">
           <div class="carousel-caption d-none d-md-block">
-            <h5>Third slide label</h5>
-            <p>Praesent commodo cursus magna, vel scelerisque nisl consectetur.</p>
+            <p>As long as a woman can look ten years younger than her daughter, she is perfectly satisfied. Oscar Wilde</p>
           </div>
         </div>
       </div>
@@ -139,15 +137,15 @@
           We strive for the highest quality of service, while maintaining a fun, friendly, non-pretentious environment.</p>
      
     </div>
-    <div class="contacts">
+    <div >
       <div class="contacts-info">
         <h4 class="h4">Contacts</h4>
         <p>Mary Ursul - director</p>
         <p>E: maursul@gmail.com</p>
-        <p>P: 123456789</p>
+        <p>P: 2323232323</p>
        
       </div>
-      <div class="location">
+      <div >
         <h4 class="h4">Location</h4>
         <p>667A Tremont Street
             Boston, MA 02118</p>
@@ -178,6 +176,7 @@
   <script src="./node_modules/jquery/dist/jquery.min.js"></script>
   <script src="./node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
   <script src="./index.js"></script>
+  <script src="https://code.jquery.com/jquery-2.2.4.min.js" integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44=" crossorigin="anonymous"></script>
 
 </body>
 
